--- a/kadai_005/html/kadai_005.html
+++ b/kadai_005/html/kadai_005.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html>
 <head>
     <title>5章課題</title>
     <meta name="description" content="このページは5章の課題です。">
@@ -15,3 +16,4 @@
     <a href="https://x.com/samuraijuku">私のプロフィールはこちら</a>
     </main>
 </body>
+</html>
