--- a/kadai_005/html/kadai_005.html
+++ b/kadai_005/html/kadai_005.html
@@ -3,10 +3,9 @@
 <head>
     <title>5章課題</title>
     <meta name="description" content="このページは5章の課題です。">
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
 </head>
 <body>
-    <main>
     <h1>私の趣味</h1>
     <p>
         私は中学時代にサッカーを始めました。<br>
@@ -14,6 +13,5 @@
     </p>
     <img src="../images/sample.jpg" alt="写真"><br>
     <a href="https://x.com/samuraijuku">私のプロフィールはこちら</a>
-    </main>
 </body>
 </html>
